--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EMAApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.EMAApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -21,7 +21,4 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.EMAApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.EMAApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
