--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -40,8 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/user_icon"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:text="@string/user_name" />
+                android:layout_marginTop="@dimen/spacing_small" />
 
             <!--platform name-->
             <TextView
