--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -17,7 +17,7 @@
         tools:listitem="@layout/layout_row" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progressBarUserList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"/>
