--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -15,7 +15,7 @@
         android:paddingHorizontal="@dimen/spacing_large"
         android:paddingBottom="@dimen/spacing_large">
 
-        //page loading progress bar
+        <!-- page loading progress bar-->
         <ProgressBar
             android:id="@+id/progressBarUserProfile"
             android:layout_width="match_parent"
