--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light_grey">#C0C0C0</color>
     <color name="user_name">#FF000000</color>
     <color name="navy">#02064a</color>
+    <color name="hot_pink">#FF69B4</color>
 </resources>
