--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -4,38 +4,46 @@
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="20dp"
-    android:paddingTop="20dp"
-    android:paddingRight="20dp"
-    android:paddingBottom="20dp">
+    android:paddingHorizontal="@dimen/spacing_Xlarge"
+    android:paddingTop="@dimen/spacing_large"
+    android:paddingBottom="@dimen/spacing_large">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/login_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:elevation="10dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/loginIcon"
             android:layout_width="@dimen/large_square_icon"
             android:layout_height="@dimen/large_square_icon"
-            android:src="@drawable/loading_icon"
+            android:contentDescription="@string/login_icon"
+            android:src="@drawable/etnetera"
+            app:layout_constraintBottom_toTopOf="@id/loginInfoLayout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            app:layout_constraintBottom_toBottomOf="@id/loginIcon"
+            style="@style/Title"
+            android:id="@+id/academyTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/loginInfoLayout"
-            android:contentDescription="@string/login_icon" />
+            android:textColor="@color/black"
+            android:text="@string/mobile_academy_2021"/>
 
         <RelativeLayout
             android:id="@+id/loginInfoLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:padding="@dimen/spacing_medium"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -43,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_username"
+                style="@style/Title"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textColor="@android:color/white" />
@@ -53,18 +62,20 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/inputUserName"
                 android:hint="@string/hint_password"
+                style="@style/Title"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:textColor="@android:color/white" />
 
             <Button
                 android:id="@+id/loginButton"
-                android:layout_width="match_parent"
+                android:layout_width="@dimen/large_square_icon"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/inputPassword"
                 android:layout_marginHorizontal="@dimen/spacing_medium"
-                android:layout_marginTop="40dp"
-                android:background="@color/grey"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:layout_centerHorizontal="true"
+                style="@style/LoginButton"
                 android:text="@string/login_button" />
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
