--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,13 @@
         <item name="android:textColor">@color/purple_500</item>
     </style>
 
+    <!--Button style -->
+    <style name="LoginButton" parent="Widget.AppCompat.Button">
+        <item name="android:paddingLeft">@dimen/spacing_small</item>
+        <item name="android:paddingRight">@dimen/spacing_small</item>
+        <item name="android:height">@dimen/square_icon_Xsmall</item>
+        <item name="backgroundTint">@color/light_grey</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
