--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -3,86 +3,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nestedScrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingHorizontal="@dimen/spacing_Xlarge"
-    android:paddingTop="@dimen/spacing_large"
-    android:paddingBottom="@dimen/spacing_large">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/login_layout"
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+        android:paddingVertical="@dimen/spacing_medium">
 
         <ImageView
-            android:id="@+id/loginIcon"
-            android:layout_width="@dimen/large_square_icon"
+            android:id="@+id/etneteraIcon"
+            android:layout_width="@dimen/xl_square_icon"
             android:layout_height="@dimen/large_square_icon"
-            android:contentDescription="@string/login_icon"
-            android:src="@drawable/etnetera"
-            app:layout_constraintBottom_toTopOf="@id/loginInfoLayout"
+            android:layout_marginTop="@dimen/spacing_large"
+            android:contentDescription="@string/etnetera_logo"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/etnetera" />
 
         <TextView
             android:id="@+id/academyTitle"
             style="@style/Title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/mobile_academy_2021"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@id/loginIcon"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:textSize="@dimen/large_text"
+            app:layout_constraintTop_toBottomOf="@+id/etneteraIcon"
+            android:layout_marginTop="@dimen/overlap_error"/>
 
-        <RelativeLayout
-            android:id="@+id/loginInfoLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/spacing_medium"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <EditText
+            android:id="@+id/inputUserName"
+            android:layout_width="250dp"
+            android:layout_height="@dimen/square_icon_medium"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/spacing_XXL"
+            android:layout_marginBottom="@dimen/spacing_small"
+            android:autofillHints="@string/hint_username"
+            android:background="#11000000"
+            android:drawableStart="@drawable/ic_action_user"
+            android:drawablePadding="@dimen/spacing_small"
+            android:ems="10"
+            android:hint="@string/hint_username"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="@dimen/spacing_small"
+            android:textSize="@dimen/medium_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/academyTitle" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inputUserName"
-                style="@style/Title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border_homeworks"
-                android:hint="@string/hint_username"
-                android:inputType="text"
-                android:maxLines="1"
-                android:padding="@dimen/spacing_small"
-                android:textColor="@android:color/white" />
+        <EditText
+            android:id="@+id/inputPassword"
+            android:layout_width="250dp"
+            android:layout_height="@dimen/square_icon_medium"
+            android:layout_below="@id/inputUserName"
+            android:layout_marginTop="@dimen/spacing_small"
+            android:autofillHints="@string/hint_password"
+            android:background="#11000000"
+            android:drawableStart="@drawable/ic_action_lock"
+            android:drawablePadding="@dimen/spacing_small"
+            android:ems="10"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword"
+            android:paddingHorizontal="@dimen/spacing_small"
+            android:textSize="@dimen/medium_text"
+            app:layout_constraintStart_toStartOf="@+id/inputUserName"
+            app:layout_constraintTop_toBottomOf="@id/inputUserName" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inputPassword"
-                style="@style/Title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/inputUserName"
-                android:background="@drawable/border_homeworks"
-                android:hint="@string/hint_password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:padding="@dimen/spacing_small"
-                android:paddingHorizontal="@dimen/spacing_medium"
-                android:textColor="@android:color/white" />
+        <android.widget.Button
+            android:id="@+id/loginButton"
+            style="@style/Username"
+            android:layout_width="@dimen/xl_square_icon"
+            android:layout_height="@dimen/square_icon_medium"
+            android:layout_marginTop="@dimen/spacing_XXL"
+            android:background="@drawable/button"
+            android:elevation="10dp"
+            android:text="@string/login_button"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
-            <Button
-                android:id="@+id/loginButton"
-                style="@style/LoginButton"
-                android:layout_width="@dimen/large_square_icon"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/inputPassword"
-                android:layout_centerHorizontal="true"
-                android:layout_marginHorizontal="@dimen/spacing_medium"
-                android:layout_marginTop="@dimen/spacing_medium"
-                android:background="@drawable/border_homeworks"
-                android:text="@string/login_button" />
-        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
